# veto-core

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: publish.yml
config/: Makefile  analytics.go  analytics.ts  go.mod  keycache.go  latency.go  latency_test.go  rules.go  tiers.go  tiers.json  tygo.yaml
gateway/: Dockerfile  README.md  cache.go  go.mod  go.sum  inference.go  keylookup.go  keylookup_test.go  main.go  metering.go  orgratelimit.go  ratelimit.go  rules.go  staticauth.go  staticauth_test.go
inference/: Dockerfile  README.md  app.py  pyproject.toml
scripts/: test.sh
